<resources>
    <string name="app_name">vpt</string>
    <string-array name="requestFormOptions">
        <item>Request Coach</item>
        <item>Request Athlete</item>
    </string-array>
    <string name="historyDateActivity_date_options">Date Options:</string>
    <string name="historyDateActivity_pick_a_date_range_LABEL">Pick a Date Range:</string>
    <string name="historyDateActivity_start_LABEL">Start</string>
    <string name="historyDateActivity_start_date_PLACEHOLDER">start_Date</string>
    <string name="historyDateActivity_end_LABEL">End</string>
    <string name="historyDateActivity_end_date_PLACEHOLDER">end_Date</string>
    <string name="historyDateActivity_pick_a_date_period_LABEL">Pick a Date Period:</string>
    <string name="historyDateActivity_period_PLACEHOLDER">PLACEHOLDER</string>
    <string name="historyDateActivity_last_month_LABEL">Last Month</string>
    <string name="historyDateActivity_last_two_months_LABEL">Last Two Months</string>
    <string name="historyDateActivity_last_quarter_LABEL">Last Quarter</string>
    <string name="historyDateActivity_last_half_year_LABEL">Last Half Year</string>
    <string name="historyDateActivity_last_year_LABEL">Last Year</string>
    <string name="historyDateActivity_all_LABEL">All</string>
    <string name="historyDateActivity_chart_frequency_LABEL">Frequency:</string>
    <string name="historyDateActivity_frequency_PLACEHOLDER">PLACEHOLDER</string>
    <string name="historyDateActivity_frequency_daily">Daily</string>
    <string name="historyDateActivity_frequency_weekly">Weekly</string>
    <string name="historyDateActivity_frequency_fortnightly">Fortnightly</string>
    <string name="historyDateActivity_frequency_monthly">Monthly</string>
    <string name="historyDateActivity_frequency_quarterly">Quarterly</string>
    <string name="historyDateActivity_chart_options_LABEL">Chart Options:</string>
    <string name="historyChartFormat_exercise_name">exercise_name</string>
    <string name="notesActivity_name_editTextHint">Name</string>
    <string name="notesActivity_weight_label">Weight</string>
    <string name="notesActivity_uom_label">(kg)</string>
    <string name="notesActivity_weight_PLACEHOLDER">100</string>
    <string name="notesActivity_reps_label">Reps</string>
    <string name="notesActivity_reps_PLACEHOLDER">100</string>
    <string name="notesActivity_difficulty_label">Difficulty</string>
    <string name="notesActivity_difficulty_PLACEHOLDER">100</string>
    <string name="notesActivity_RPE_label">RPE</string>
    <string name="notesActivity_RPE_PLACHOLDER">100</string>
    <string name="notesActivity_notes_label">Notes</string>
    <string name="notesActivity_notesExpand_buttonLabel">+</string>
    <string name="notesActivity_note_editTextHint">Add notes here</string>
    <string name="notesActivity_update_button">Update</string>
    <string name="notesActivity_help_button">\?</string>
    <string name="dataClassificationSelectionActivity_chart_breakdown">Chart Breakdown</string>
    <string name="loginActivity_loginOrSignUp_LABEL">Login or Signup</string>
    <string name="loginActivity_emailHint_LABEL">Email</string>
    <string name="loginActivity_passwordHint_LABEL">Password</string>
    <string name="loginActivity_signIn_BUTTONLABEL">Sign in</string>
    <string name="loginActivity_signUp_BUTTONLABEL">Sign up</string>
    <string name="loginActivity_forgotPassword_BUTTONLABEL">Forgot password</string>
    <string name="requestFormActivity_spinner_PLACEHOLDER">PLACEHOLDER</string>
    <string name="requestFormActivity_usersEmailHint_LABEL">User\'s Email</string>
    <string name="requestFormActivity_usersFirstNameHint_LABEL">User\'s First Name</string>
    <string name="requestFormActivity_usersLastNameHint_LABEL">User\'s Last Name</string>
    <string name="requestFormActivity_requestButton_LABEL">Request</string>
    <string name="requestFormActivity_noUser_LABEL">No Such User Exists</string>
    <string name="signUpActivity_signUp_LABEL">Sign Up</string>
    <string name="signUpActivity_email_LABEL">Email</string>
    <string name="vptSign_v">V</string>
    <string name="vptSign_P">P</string>
    <string name="vptSign_T">T</string>
    <string name="signUpActivity_emailAddressHint_LABEL">Email address</string>
    <string name="signUpActivity_password_label">Password</string>
    <string name="signUpActivity_passwordHint_LABEL">Password</string>
    <string name="signUpActivity_firstName_LABEL">First Name</string>
    <string name="signUpActivity_firstNameHint_LABEL">First Name</string>
    <string name="signUpActivity_lastName_LABEL">Last Name</string>
    <string name="signUpActivity_lastNameHint_LABEL">Last Name</string>
    <string name="signUpActivity_iAgreeToThe_LABEL">I agree to the</string>
    <string name="signUpActivity_theTermsAndConditions_LABEL">the terms and conditions.</string>
    <string name="signUpActivity_iAgreeCheckBox_LABEL">I agree</string>
    <string name="signUpActivity_cancelButton_LABEL">Cancel</string>
    <string name="signUpActivity_signUpButton_LABEL">Sign Up</string>
    <string name="signUpActivity_userAgreement">User Agreement</string>
    <string name="signUpActivity_tocsOpening_LABEL">Placeholder text</string>
    <string name="signUpActivity_changesTitle_LABEL">Changes to the Agreement</string>
    <string name="signUpActivity_thirdPartyTitle_LABEL">Third Party Agreements</string>
    <string name="signUpActivity_entireAgreementTitle_LABEL">Entire Agreement</string>
    <string name="signUpActivity_offerAndAcceptanceTitle_LABEL">Offer and Acceptance</string>
    <string name="signUpActivity_terminationTitle_LABEL">Account Termination</string>
    <string name="feedbackFragment_feedbackTitle_LABEL">Feedback</string>
    <string name="feedbackFragment_suggestionHint_LABEL">Suggestion</string>
    <string name="feedbackFragment_submitButton_LABEL">Submit</string>
    <string name="userAgreementFragment_userAgreementTitle_LABEL">User Agreement</string>
    <string name="userAgreementFragment_preambleText_LABEL">Please carefully read the entire agreement (the “Agreement”) prior to accepting the terms of service and using VPT (the “App”, “Web App”, “the service”). If you do not agree with the entire Agreement, do not accept these Terms of Use, and do not use the App or Web App or otherwise engage with the service. To agree to the Agreement, you must be of the age of majority in your country and state of residence. If you are not age of majority your legal guardian or parent must accept the Terms.</string>
    <string name="userAgreementFragment_changesTitle_LABEL">Changes to the Agreement</string>
    <string name="userAgreementFragment_changesText_LABEL">Where required, VPT will make amendments to the Agreement. Upon changes to the Agreement, VPT will advise you inside the app or webapp of the changes made. When this occurs, ongoing use of the app or webapp will constitute acceptance of the terms of the Agreement.</string>
    <string name="userAgreementFragment_thirdPartyTitle_LABEL">Third Party Agreements</string>
    <string name="userAgreementFragment_thirdPartyText_LABEL">VPT uses third party products, programs, and services to produce the App. By agreeing to the Agreement, you are also agreeing that some of your data will be covered by these third-party Agreements. These third parties include, but are not limited to, Google, Samsung, and Apple.</string>
    <string name="userAgreementFragment_entireAgreementTitle_LABEL">Entire Agreement</string>
    <string name="userAgreementFragment_entireAgreementText_LABEL">This Agreement, and associated third party agreements, constitutes the entire Agreement. No other agreements or amendments, in writing by any representative or agent of VPT or otherwise, constitute any amendments to this Agreement.</string>
    <string name="userAgreementFragment_offerTitle_LABEL">Offer and Acceptance</string>
    <string name="userAgreementFragment_offerText_LABEL">This Agreement is an invitation to treat. By creating an account, you are producing an offer to utilise the platform. VPT will accept your offer upon the finalisation of your account.</string>
    <string name="userAgreementFragment_terminationTitle_LABEL">Account Termination</string>
    <string name="userAgreementFragment_terminiationText_LABEL">This Agreement; the associated contract; the associated service provided; and any other potential relationship between VPT and you can be terminated by either party at either time, without notice and without explanation. For a user to end terminate the contract, they must delete their account. Upon deletion of an account, the Agreement will end, and all associated services provided for the user will cease.</string>
    <string name="userAgreementFragment_removalTitle_LABEL">Temporary and Permanent Banning</string>
    <string name="userAgreementFragment_removalText_LABEL">VPT can, at their own discretion and without cause or notice, in addition to terminating a user’s account also temporarily or permanent ban them from VPT.</string>
    <string name="userAgreementFragment_dataTitle_LABEL">Data</string>
    <string name="userAgreementFragment_dataText_LABEL">VPT may use third party programs to store data. Where the data is stored by a third party, the associated data ownership rules of that third party will be considered for all VPT users’ data. Notwithstanding this, all data associated with VPT belongs to VPT. Users are allowed access to data associated with their account under this Agreement. Without limiting termination clause, the termination of the account will cease any use of data associated with the account. VPT does not share your data with any third parties for any purposes other than the purpose of storage. VPT does not use your data for any purpose other than providing the service.</string>
    <string name="userAgreementFragment_costTitle_LABEL">Cost</string>
    <string name="userAgreementFragment_costText_LABEL">VPT is a free service.</string>
    <string name="userAgreementFragment_commercialTitle_LABEL">Commercial Use</string>
    <string name="userAgreementFragment_commercialText_LABEL">VPT is free for commercial use. There is no separate written agreement for commercial use. Without limiting any other section within the Agreement; Businesses, Governments, and other organisations can use VPT without any need for an additional express agreement.</string>
    <string name="userAgreementFragment_warrantyTitle_LABEL">Warranty</string>
    <string name="userAgreementFragment_warrantyText_LABEL">VPT provides no warranties for the service or your data. VPT does not provide any representations that the service is fit for any particular purpose, nor is it free of defects.</string>
    <string name="userAgreementFragment_aclTitle_LABEL">Australian Consumer Law</string>
    <string name="userAgreementFragment_aclText_LABEL">All rights under Australian Consumer Law are full and not infringed by this Agreement. Where there is any inconsistency between the two, Australia Consumer Law will be prioritised.</string>
    <string name="userAgreementFragment_ipTitle_LABEL">Intellectual Property Rights</string>
    <string name="userAgreementFragment_ipText_LABEL">All property of VPT, including but not limited to, the VPT logo and branding, are property of VPT.</string>
    <string name="userAgreementFragment_userGuidelinesTitle_LABEL">User Guidelines</string>
    <string name="userAgreementFragment_userGuidelinesText_LABEL">Without limiting any other part of the Agreement, the user agrees to use VPT without harassing, threatening, or otherwise acting in an anti-social manner to other users. The user agrees to not participate in any offensive, illegal, or other behaviour on the platform. Without limiting termination clause, failure to act in line with these guidelines will be grounds for the termination of a users’ account without notice or explanation.</string>
</resources>