<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings_tocs">

    <LinearLayout
        android:id="@+id/userAgreementFragment_linearLayout_TOCs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="200dp"
        android:alpha="1"
        android:background="@drawable/exerciseviewborder"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/userAgreementFragment_textView_userAgreementTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userAgreementFragment_userAgreementTitle_LABEL"
            android:textColor="#000000"
            android:textSize="20sp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userAgreementFragment_textView_preamble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_preambleText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_ChangesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_changesTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_changesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_changesText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_ThirdPartyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_thirdPartyTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_thirdparty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_thirdPartyText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_entireagreement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_entireAgreementTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_entireagreementtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_entireAgreementText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_offerTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_tocoffertext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_offerText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_toctermination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_terminationTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_tocterminationtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_terminiationText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_banning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_removalTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_banningtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_removalText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_dataTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_dattext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_dataText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_costTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_costtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_costText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_commercial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_commercialTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_commercialtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_commercialText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_warranty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_warrantyTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_warrantytext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_warrantyText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_acl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_aclTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_acltext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_aclText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_ipTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_iptext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_ipText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_ugl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_userGuidelinesTitle_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/userAgreementFragment_textView_ugltext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:justificationMode="inter_word"
                    android:scrollbars="vertical"
                    android:text="@string/userAgreementFragment_userGuidelinesText_LABEL"
                    android:textColor="@color/Rich_Black_FOGRA_39"
                    android:textSize="13sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>